# LinHT-utils

gpio/: Makefile  flashlight.c
gpio/flashlight/: Makefile  flashlight.c
gpio/leds/: Makefile  green_led.c  red_led.c
gpio/test/: Makefile  gpio_test.c
gpio/tx_rx/: Makefile  tx_rx.c
grc/: bench.grc  som_fm_ctcss.grc  som_m17.grc  som_m17_ptt.grc  som_m17_test_rx.grc  som_m17_test_tx.grc  som_mpeg_test_tx.grc  som_spectrum_test.grc  som_spectrum_test_epy_block_0.py  som_ssb.grc  som_tetra.grc
pmu/: Makefile  README.md  fuses.hex  main.c  pmu-fw_no_side_btn.hex
scripts/: batt_volt.sh  expand_rootfs.sh  temp.sh  volume_ctrl.sh
sx1255/: Makefile  sx1255-spi.c
tests/fb_test/: Makefile  fb.c
tests/gui_message/: Makefile  test.c
tests/gui_test/: Makefile  settings.h  test.c
tests/m17-packet-sqlite/: Makefile  m17-packet-sqlite.c
tests/ptt_msg/: Makefile  ptt-msg.c
tests/soapy_linht/: CMakeLists.txt  README.md  fir.cpp  fir.h  main.cpp
tests/spectrum/: test.c
tests/zmq_proxy/: Makefile  main.c
